--- a/database.conf
+++ b/database.conf
@@ -1,4 +1,4 @@
-url=jdbc:postgresql://localhost:5432/port
+url=jdbc:postgresql://localhost:5432/sambo
 user=fabien
 motDePasse=123Fabien$
 driver=org.postgresql.Driver
