--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
         <artifactId>picocli</artifactId>
         <version>4.7.0</version>
     </dependency>
+    <dependency>
+        <groupId>ambovombe</groupId>
+        <artifactId>dao</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
     </dependencies>
 
   <build>
